<resources>
    <string name="app_name">Frigider</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Frigider</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Fructe Legume</string>
    <string name="tab_text_2">Lactate Preparate</string>
    <string name="tab_text_3">FastFood Dulciuri</string>
    <string name="tab_text_4">Lichide</string>
    <string name="tab_text_5">Altele</string>
    <string name="login">Login</string>
    <string name="create">Creare</string>
    <string name="theme1">Theme1</string>
    <string name="theme2">Theme2</string>
<!--
info table
 -->
    <string name="produs">Produs</string>
    <string name="temperatura">Temperatura</string>
    <string name="interval1">1 – 3 grade Celsius</string>
    <string name="interval2">2 – 4 grade Celsius</string>
    <string name="interval3">4 – 6 grade Celsius</string>
    <string name="interval4">8 – 10 grade Celsius</string>

</resources>
